--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ OPENAI_API_KEY=your-openai-api-key-here
 # Get these from https://developer.spotify.com/dashboard/
 SPOTIFY_CLIENT_ID=your-spotify-client-id-here
 SPOTIFY_CLIENT_SECRET=your-spotify-client-secret-here
+
+# Supabase Configuration (for cloud storage - RECOMMENDED)
+# Get these from: https://supabase.com → Your Project → Settings → API
+# Follow the setup guide in SUPABASE_COMPLETE_GUIDE.md
+SUPABASE_URL=https://your-project-id.supabase.co
+SUPABASE_KEY=your-anon-public-key-here
