--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "index.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
       "src": "/(.*)",
-      "dest": "index.py"
+      "dest": "/api/index.py"
     }
   ],
   "env": {
-    "FLASK_ENV": "production"
-  },
-  "functions": {
-    "index.py": {
-      "maxDuration": 10
-    }
+    "PYTHON_VERSION": "3.9",
+    "FORCE_SUPABASE_ONLY": "true"
   }
 }
